# update_after_submit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
update_after_submit/: hooks.py  modules.txt  update_member_vol_sql.py
update_after_submit/config/: desktop.py  docs.py
update_after_submit/public/js/: sales_order.js
